# edt-bridge

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  ONBOARDING.md  ORIGIN.md  README.md  README.ru.md  SECURITY.md  build-nomaven.ps1  build-nomaven.sh  edt-bridge.target  make-shortcut.ps1  pom.xml  run-headless.ps1  run-headless.sh  toggle-headless.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pypi-publish.yml  release.yml
com.e1c.fresh.edtbridge/: plugin.xml  pom.xml
com.e1c.fresh.edtbridge/OSGI-INF/: edtbridge-mcp.xml
com.e1c.fresh.edtbridge/src/com/e1c/fresh/edtbridge/: Activator.java  EarlyStartup.java  McpServerComponent.java
com.e1c.fresh.edtbridge/src/com/e1c/fresh/edtbridge/edt/: EdtModelGateway.java
com.e1c.fresh.edtbridge/src/com/e1c/fresh/edtbridge/mcp/: McpServer.java
docs/: DESIGN.md  cli.md  cli.ru.md  index.md  index.ru.md  install.md  install.ru.md  security.md  security.ru.md  tools.md  tools.ru.md
docs/ru/: CHANGELOG.ru.md  CODE_OF_CONDUCT.ru.md  CONTRIBUTING.ru.md  ONBOARDING.ru.md  README.ru.md  SECURITY.ru.md
io.github.keyfire.edtbridge/: plugin.xml  pom.xml
io.github.keyfire.edtbridge/OSGI-INF/: edtbridge-mcp.xml
io.github.keyfire.edtbridge/src/io/github/keyfire/edtbridge/: Activator.java  EarlyStartup.java  EdtBridgePrefs.java  McpServerComponent.java
python/: README.md  README.ru.md  pyproject.toml
python/src/edt_bridge_mcp/: __init__.py  cli.py  i18n.py  server.py  update.py
python/tests/: test_backend.py  test_cli.py  test_cli_docs.py  test_stdio_frames.py  test_update.py  test_version.py
scripts/: build-nomaven.ps1  build-nomaven.sh  edt-common.ps1  gen-cli-docs.py  make-shortcut.ps1  render-diagrams.sh  run-gui.ps1  run-headless.ps1  sync-docs.mjs  test-java.sh
site/: blume.config.ts  package-lock.json  package.json
tests/java/io/github/keyfire/edtbridge/core/: IbcmdArgsTest.java  (+7 more)
(+111 files in other folders)
