[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "edt-bridge-mcp"
dynamic = ["version"]
description = "stdio MCP front-end for the edt-bridge 1C:EDT plugin: proxies to a running EDT, or auto-starts a headless one"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "edt-bridge contributors" }]
keywords = ["1c", "edt", "mcp", "model-context-protocol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/keyfire/edt-bridge"

[project.scripts]
edt-bridge-mcp = "edt_bridge_mcp.server:main"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.dynamic]
version = { attr = "edt_bridge_mcp.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import the package from the checkout, so the suite runs without installing it first.
pythonpath = ["src"]
